--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -323,10 +323,6 @@ margin-bottom: 32px;
 .network-stage {
 }
 
-.stiky-container {
-  border: 1px solid white;
-}
-
 .dendogram-stage {
   display: flex;
   align-items: center;
@@ -351,6 +347,11 @@ margin-bottom: 32px;
   // margin-bottom: 0px;
 }
 
+.dend-stage-box {
+  height: 90vh;
+  display: flex;
+  align-items: center;
+}
 
 .dend-stage, .dend-two-stage {
   // border: 1px solid black;
@@ -378,12 +379,6 @@ margin-bottom: 32px;
   background-color: white;
 }
 
-.chart-container {
-  // background-color: rgba(180,47, 20,0.2);
-  flex: 1;
-  display: block;
-}
-
 #network {
   margin: auto;
   // border: 1px solid $darkBlue;
@@ -409,6 +404,51 @@ margin-bottom: 32px;
   -webkit-transition: transform 0.5s;
   -moz-transition: transform 0.5s;
   -o-transition: transform 0.5s;
+}
+
+working-groups-dendrogram#working-groups-dendrogram {
+  display: block;
+
+  svg {
+    transition: transform 0.75s;
+    -webkit-transition: transform 0.75s;
+    -moz-transition: transform 0.75s;
+    -o-transition: transform 0.75s;
+  }
+}
+
+.selection-title {
+    font-family: $sans;
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 8px;
+  }
+
+.wgFocusButton {
+  display: block;
+  height: 40px;
+  width: auto;
+  min-width: 40px;
+  border: 1px solid $darkGrey;
+  border-radius: 20px;
+  float: left;
+  text-align: center;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+
+  p {
+      font-family: "Roboto", sans-serif;
+      font-size: 10px;
+      font-weight: 600;
+      margin: 0px;
+      padding: 7.5px 7px;
+  }
+
+}
+
+.wgFocusButton:hover {
+  background-color: $lightGrey;
 }
 
 .room.h50vh {
@@ -455,14 +495,12 @@ margin-bottom: 32px;
 .node circle {
   fill: $darkBlue;
   fill-opacity: 1;
-  // stroke: $darkBlue;
-  // stroke-width: 0px;
 }
 
 .node {
   font: 7px $sans;
   fill: $veryDarkBlue;
-  cursor: pointer;
+  /*cursor: pointer;*/
 }
 
 .node text {
@@ -504,11 +542,19 @@ margin-bottom: 32px;
   opacity: 1;
 }
 
+#map1 > iframe {
+    height: 60vh;
+    border: 12px solid $darkBlue;
+    margin-left: -15px;
+    margin-right: -15px;
+    width: 100vw;
+}
+
 #events-map {
   width: 100%;
   height: 60vh;
   min-height: 300px;
-  border: 12px solid $veryDarkBlue;
+  border: 12px solid $darkBlue;
   box-sizing: border-box;
   margin:0;
   padding:0;
@@ -535,6 +581,7 @@ margin-bottom: 32px;
 legend-communities {
   display: block;
   margin: 10px 0;
+  clear: both;
 
   p {
     display: flex;
@@ -680,10 +727,16 @@ map-emlo {
 //linechart
 
 linechart-letter-distribution {
+  height: 60vh;
+    border: 12px solid $darkBlue;
+    margin-left: -15px;
+    margin-right: -15px;
+    width: 100vw;
+
   border: 0px solid white;
   border-width: 12px;
   width: 100vw;
-  height: 50vh;
+  height: 60vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -722,8 +775,6 @@ linechart-letter-distribution {
 
 }
 
-
-
 //Responsiveness
 
 $screen-sm-min: 768px;
@@ -749,9 +800,11 @@ $screen-lg-min: 1200px;
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: $screen-md-min) {
-  // .navbar-collapse {
-  //   background-color: green;
-  // }
+
+  .sticky-container {
+    /*width: 727.500px;*/
+  }
+
   .net-img-container>img {
     border: 12px solid $darkBlue;
     margin:auto;
@@ -811,9 +864,11 @@ $screen-lg-min: 1200px;
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: $screen-lg-min) {
-  // .navbar-collapse {
-  //   background-color: purple;
-  // }
+  
+  .sticky-container {
+    /*width: 727.500px;*/
+  }
+
   section:nth-child(1) {
     .level3.hand-left {
       height: 450px;
