--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,16 @@
-<section class="container-fluid" style="background-image: url('images/cover_BG.png');"  id="section0">
+<section class="container-fluid" id="section0">
+<!--   <div class="level3 hand-left" style="background-image: url('images/cover_L3a.png');"></div>
+  <div class="level3 hand-right" style="background-image: url('images/cover_L3b.png');"></div>
+  <div class="level2" style="background-image: url('images/cover_L2.png');"></div> -->
+  <div class="level1" style="background-image: url('images/cover_L1.png');"></div>
+</section>
+
+<!-- <section class="container-fluid" style="background-image: url('images/cover_BG.png');"  id="section0">
   <div class="level3 hand-left" style="background-image: url('images/cover_L3a.png');"></div>
   <div class="level3 hand-right" style="background-image: url('images/cover_L3b.png');"></div>
   <div class="level2" style="background-image: url('images/cover_L2.png');"></div>
   <div class="level1" style="background-image: url('images/cover_L1.png');"></div>
-</section>
+</section> -->
 
 <section class="container-fluid" id="section1">
   <div class="container">
@@ -389,13 +396,21 @@
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
         <p>The activities funded by COST also include Workshops held at irregular intervals depending on need, Training Schools designed to induct younger scholars into the techniques and methods being pioneered by the group, and Short Term Scientific Missions (STSMs), which fund international exchange visits within the network likewise targeted at colleagues in early career.</p>
         <img class="img-responsive" src="images/events-details.svg" style="width: 367px; margin: auto; margin-top: 60px; margin-bottom: 50px;" />
-        <p><span style="font-weight:bold;">NB</span>: <span style="color:#63b6e5;font-weight:bold;">Light blue markers</span> represents places where different kind of events took place, not necessarily overlapping each others (e.g. a conference, a training school and various meetings). <span style="color:#4d4d4d;font-weight:bold;">Markers with the “plus” sign</span> indicate places where more than 9 activities took place (only United Kingdom).</p>
+        <!-- <p><span style="font-weight:bold;">NB</span>: <span style="color:#63b6e5;font-weight:bold;">Light blue markers</span> represents places where different kind of events took place, not necessarily overlapping each others (e.g. a conference, a training school and various meetings). <span style="color:#4d4d4d;font-weight:bold;">Markers with the “plus” sign</span> indicate places where more than 9 activities took place (only United Kingdom).</p> -->
       </div>
       <div class="clearfix"></div>
     </div>
   </div>
   <div class="row">
       <iframe id="events-map" frameborder="0" src="https://densitydesign.cartodb.com/viz/6ced7000-3d38-11e6-b4c7-0e98b61680bf/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+        <p>Donec ullamcorper nulla non metus auctor fringilla. Curabitur blandit tempus porttitor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Sed posuere consectetur est at lobortis.</p>
+      </div>
+      <div class="clearfix"></div>
+    </div>
   </div>
 </section>
 
