--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -174,7 +174,7 @@ section:nth-child(1) {
   }
 }
 
-#section1,#section4 {
+#section1,#section4XXX {
   background-color: $darkBlue;
   color: $lightGrey;
 
