--- a/app/views/main.html
+++ b/app/views/main.html
@@ -59,31 +59,7 @@
   </div>
   <div class="row">
     <div class="col-xs-12" id="map1">
-      <iframe width="100%" height="520" frameborder="0" src="https://densitydesign.cartodb.com/viz/dc41f152-3a21-11e6-80bd-0ef7f98ade21/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-    </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <h3>[MOVE FROM HERE] Fostering Collaboration</h3>
-      </div>
-      <div class="clearfix"></div>
-      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
-      <div class="clearfix"></div>
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Thanks to a particular form of grant called STSM (Short Term Scientific Missions) people had been able of meet with the aim of lead very specific projects.
-          <br/>In the network, nodes are representing COST-involved nations. Edges are directional, meaning one or more people travelled from a country to a hosting one, while the size is representative of the sum of in-going and out-going connection every nation assists.
-          <br/>As it is possible to deduce from the image, not all the nations have been involved (as a hosting one or not) in an STSM.</p>
-        <img src="images/stsm-network.png" class="img-responsive">
-      </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>In essence, a new scholarly network is needed in order to study the older scholarly network of the early modern period. To sustain this new network, we need a new breed of digital networking tools; and the purpose of this Action is to assemble the network needed to design these tools: a network to devise a networking platform to support a network studying past networks.</p>
-        <p>COST Action does not found research itself, but provide the environment for adding up to something greater than the sum of individual parts.</p>
-      </div>
+      <iframe width="100%" height="520" frameborder="0" src="https://densitydesign.carto.com/viz/0fb4af50-7074-11e7-9e61-0e3a376473ab/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
     </div>
   </div>
 </section>
@@ -110,8 +86,8 @@
       <div class="col-sm-9 communities-dendogram-extended"></div>
       <div class="col-sm-3">
         <div class="dend-stage">
-          <h4>Involved People</h4>
-          <h4>–</h4>
+          <!-- <h4>Involved People</h4>
+          <h4>–</h4> -->
           <!--  <p class="description">A total number of <b>164</b> people are invoved. The chart represents them divided into their belonging communities, which are the ones saw before.<br/>About three out of four people are scholars, experts in humanistic matters, while the rest of the  group is represented by Archivist, Librarians, Digital Humanist, Designers and Computer Scientist. The role of these people is to support the scholars in expressing needs and, together, to envision how to add value to their work.</p> -->
           <legend-communities></legend-communities>
         </div>
@@ -173,19 +149,20 @@
     </div>
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <h2>Events and Activities</h2>
-        <h3>[Text.]</h3>
+        <h2>Activities</h2>
+        <h3>Over 60 events and exchanges</h3>
       </div>
       <div class="clearfix"></div>
       <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>The activities funded by COST also include Workshops held at irregular intervals depending on need, Training Schools designed to induct younger scholars into the techniques and methods being pioneered by the group, and Short Term Scientific Missions (STSMs), which fund international exchange visits within the network likewise targeted at colleagues in early career.</p>
-        <img class="img-responsive" src="images/events-details.svg" style="width: 367px; margin: auto; margin-top: 60px; margin-bottom: 50px;" />
+        <p>The working groups have helped to structure four years of intensive discussion and exchange, organised into three conferences (in Oxford 2015, Warsaw 2016 and Malta 2018), two training schools (in Oxford and Como), and thirteen Working Group and Management Committee Meetings (in Brussels, Prague, Vienna, Lancaster, Zagreb, Dublin, Como, The Hague, Lisbon, Chester, Wolfenbüttel, Budapest, and Oxford).</p>
+        <!-- <img class="img-responsive" src="images/events-details.svg" style="width: 367px; margin: auto; margin-top: 60px; margin-bottom: 50px;" /> -->
         <!-- <p><span style="font-weight:bold;">NB</span>: <span style="color:#63b6e5;font-weight:bold;">Light blue markers</span> represents places where different kind of events took place, not necessarily overlapping each others (e.g. a conference, a training school and various meetings). <span style="color:#4d4d4d;font-weight:bold;">Markers with the “plus” sign</span> indicate places where more than 9 activities took place (only United Kingdom).</p> -->
       </div>
       <div class="clearfix"></div>
     </div>
+
   </div>
   <div class="row">
     <iframe id="events-map" frameborder="0" src="https://densitydesign.cartodb.com/viz/6ced7000-3d38-11e6-b4c7-0e98b61680bf/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
@@ -193,11 +170,27 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Donec ullamcorper nulla non metus auctor fringilla. Curabitur blandit tempus porttitor. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Sed posuere consectetur est at lobortis.</p>
+        <h3>Fostering Collaboration</h3>
       </div>
       <div class="clearfix"></div>
+      <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
+      <div class="clearfix"></div>
+      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+        <p>Thanks to a particular form of grant called STSM (Short Term Scientific Missions) people had been able of meet with the aim of lead very specific projects.
+          <br/>In the network, nodes are representing COST-involved nations. Edges are directional, meaning one or more people travelled from a country to a hosting one, while the size is representative of the sum of in-going and out-going connection every nation assists.
+          <br/>As it is possible to deduce from the image, not all the nations have been involved (as a hosting one or not) in an STSM.</p>
+        <img src="images/stsm-network.png" class="img-responsive">
+      </div>
     </div>
   </div>
+<!--   <div class="container">
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
+        <p>In essence, a new scholarly network is needed in order to study the older scholarly network of the early modern period. To sustain this new network, we need a new breed of digital networking tools; and the purpose of this Action is to assemble the network needed to design these tools: a network to devise a networking platform to support a network studying past networks.</p>
+        <p>COST Action does not found research itself, but provide the environment for adding up to something greater than the sum of individual parts.</p>
+      </div>
+    </div>
+  </div> -->
 </section>
 <section class="container-fluid" id="section6">
   <div class="container">
@@ -208,14 +201,14 @@
     </div>
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <h2>Know More</h2>
+        <h2>Learn More</h2>
         <h3>~</h3>
       </div>
       <div class="clearfix"></div>
       <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Whether you want to discover more about the work done by the COST Action "Reassembling the Republic of Letters" and know more about the upcoming and past events, or you are interest in knowing how to take part, please visit our website.</p>
+        <p>To learn more about the objectives of Reassembling the Republic of Letters, the agendas of its Working Groups, its membership, its past and future events, and modes of participation, please visit our website. The basic recommendations emerging from the Action will be published on open access in an enhanced electronic publication.</p>
         <p><a href="http://www.republicofletters.com">www.republicofletters.com</a></p>
       </div>
     </div>
