--- a/app/views/main.html
+++ b/app/views/main.html
@@ -165,7 +165,8 @@
 
   </div>
   <div class="row">
-    <iframe id="events-map" frameborder="0" src="https://densitydesign.cartodb.com/viz/6ced7000-3d38-11e6-b4c7-0e98b61680bf/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+    <!-- <iframe id="events-map" frameborder="0" src="https://densitydesign.cartodb.com/viz/6ced7000-3d38-11e6-b4c7-0e98b61680bf/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe> -->
+    <iframe id="events-map" width="100%" height="520" frameborder="0" src="https://densitydesign.carto.com/viz/5689b4e6-7210-11e7-a1e4-0ef24382571b/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
   </div>
   <div class="container">
     <div class="row">
