--- a/app/views/main.html
+++ b/app/views/main.html
@@ -177,9 +177,8 @@
       <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>Thanks to a particular form of grant called STSM (Short Term Scientific Missions) people had been able of meet with the aim of lead very specific projects.
-          <br/>In the network, nodes are representing COST-involved nations. Edges are directional, meaning one or more people travelled from a country to a hosting one, while the size is representative of the sum of in-going and out-going connection every nation assists.
-          <br/>As it is possible to deduce from the image, not all the nations have been involved (as a hosting one or not) in an STSM.</p>
+          <p>A special feature of COST Actions are the so-called ‘Short-Term Scientific Missions’ or ‘STSMs’.  This funding stream allows early stage researchers to travel from one partner institution within the network to another institution in another country in order to exchange expertise within the community.  Over 40 such exchanges will have been funded by the end of the Action.  The following graphic gives an impression of the pattern of exchange.</p>
+          <p>In the network, nodes are representing COST-involved nations. Edges are directional, meaning one or more people travelled from a country to a hosting one, while the size is representative of the sum of in-going and out-going connection every nation assists.</p>
         <img src="images/stsm-network.png" class="img-responsive">
       </div>
     </div>
@@ -209,8 +208,8 @@
       <div class="h-row col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
-        <p>To learn more about the objectives of Reassembling the Republic of Letters, the agendas of its Working Groups, its membership, its past and future events, and modes of participation, please visit our website. The basic recommendations emerging from the Action will be published on open access in an enhanced electronic publication.</p>
-        <p><a href="http://www.republicofletters.com">www.republicofletters.com</a></p>
+        <p>To learn more about the objectives of Reassembling the Republic of Letters, the agendas of its Working Groups, its membership, its past and future events, and modes of participation, please visit our website.<br/>The basic recommendations emerging from the Action will be published on open access in an enhanced electronic publication.</p>
+        <p><a href="http://www.republicofletters.net">www.republicofletters.net</a></p>
       </div>
     </div>
   </div>
